[project]
name = "vcf-ubuntu-vulnerabilities"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3",
    "jinja2>=3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
